--- a/bikcraft/_css/style.css
+++ b/bikcraft/_css/style.css
@@ -1,3 +1,93 @@
-* {
-    background-color: aqua;
+body {
+    margin: 0px;
+    padding: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+ul {
+    margin: 0px;
+    padding: 0px;
+    list-style: none;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+a {
+    text-decoration: none;
+}
+
+.header-bg {
+    background-color: #000000;
+}
+
+.header-menu{
+    display: flex;
+    gap: 40px;
+    flex-wrap: wrap;
+}
+
+.header-menu a {
+    color: #ffffff;
+    display: inline-block;
+    padding: 16px 0px;
+    font-size: 18px;
+    position: relative;
+}
+
+/*efeito abaixo do texto*/
+.header-menu a:after{
+    content: "";
+    display: block;
+    height: 2px;
+    width: 0px;
+    background: #ffffff;
+    margin-top: 4px;
+    transition: 0.3s;
+    position: absolute;
+}
+
+.header-menu a:hover:after {
+    width: 100%;
+}
+
+
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 20px;
+    box-sizing: border-box;
+    max-width: 1200px;
+}
+
+@media (max-width: 800px) {
+    .header-menu {
+        gap: 20px;
+    }
+
+    .header-menu a {
+        background-color: #111111;
+        padding: 10px 16px;
+        border-radius: 4px;
+    }
+
+    .header-menu a:hover {
+        background-color: #2e2e2e;
+    }
+
+    .header-menu a:after {
+        display: none;
+    }
+}
+
+@media (max-width: 600px) {
+    .header-menu{
+        gap: 12px;
+    }
+    .header-menu a {
+        padding: 8px 12px;
+        font-size: 14px;
+    }
 }
